# comfyui_inteliweb_nodes

./: LICENSE  README.md  THIRD_PARTY_NOTICES.md  __init__.py  amd_monitor.py  input_switch.py  photopea_bridge.py  prompt_list.py  purge_vram.py  pyproject.toml  resource_monitor.py  system_check.py
nodes/: __init__.py  input_switch.py  prompt_list.py  purge_vram.py  replace_text_multi.py  string_index_selector.py  system_check.py
web/: FreeMemory_Inteliweb.js  InputSwitch_Inteliweb.js  PhotopeaEditor_Inteliweb.js  ResourceMonitor_Inteliweb.js  SystemCheck_Inteliweb.js  index.js
web/docs/: InteliwebSystemCheck.md
