[project]
name = "comfyui_inteliweb_nodes"
version = "0.15.1"
description = "System Check (Inteliweb): RAM/VRAM live, Free RAM/VRAM buttons, Py Libs. + Photopea Editor integration (menu contextual)."
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = []

[project.urls]
Repository = "https://github.com/maoper11/comfyui_inteliweb_nodes"
Homepage = "https://github.com/maoper11/comfyui_inteliweb_nodes"

[tool.comfy]
PublisherId = "maoper11"
DisplayName = "ComfyUI_Inteliweb_nodes"
Icon = "https://github.com/maoper11/comfyui_inteliweb_nodes/blob/main/assets/icon.png?raw=1"
Categories = ["Utility", "Editor"]
Tags = ["system", "check", "ram", "vram", "flash-attn", "inteliweb", "photopea", "clipspace", "editor", "right-click-menu"]
