[project]
name = "comfyui_inteliweb_nodes"
version = "0.18.1"
description = "Inteliweb utilities for ComfyUI: top-bar resource monitor, System Check, and Free Memory."
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = ["psutil", "nvidia-ml-py"]

[project.urls]
Repository = "https://github.com/maoper11/comfyui_inteliweb_nodes"
Homepage = "https://github.com/maoper11/comfyui_inteliweb_nodes"

[tool.comfy]
PublisherId = "maoper11"
DisplayName = "ComfyUI_Inteliweb_nodes"
Icon = "https://github.com/maoper11/comfyui_inteliweb_nodes/blob/main/assets/icon.png?raw=1"
Categories = ["Utility"]
Tags = ["system", "check", "monitor", "resource-monitor", "cpu", "gpu", "ram", "vram", "temperature", "flash-attn", "inteliweb"]
